--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AlarmDiary</string>
+    <string name="add_word">Add</string>
+    <string name="hint_title">Title...</string>
+    <string name="hint_text">Text...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
+    <string name="delete">Delete</string>
 </resources>
